grammar/test/corpus/match.txt
==================
Match expression
==================

fn f(x: int32): int32 {
    match x {
        1 => 10,
        2 => 20,
        _ => 0,
    }
}

---

(source_file
  (function_definition
    (value_identifier)
    (parameters
      (parameter
        (value_identifier)
        (type_annotation
          (simple_type
            (primitive_type)))))
    (type_annotation
      (simple_type
        (primitive_type)))
    (block
      (match_expression
        (value_identifier)
        (match_arm
          (pattern
            (literal_pattern
              (integer_literal)))
          (integer_literal))
        (match_arm
          (pattern
            (literal_pattern
              (integer_literal)))
          (integer_literal))
        (match_arm
          (pattern
            (wildcard_pattern))
          (integer_literal))))))

==================
Match with block arms
==================

fn f(x: int32): int32 {
    match x {
        1 => { let y = 10; y },
        _ => 0,
    }
}

---

(source_file
  (function_definition
    (value_identifier)
    (parameters
      (parameter
        (value_identifier)
        (type_annotation
          (simple_type
            (primitive_type)))))
    (type_annotation
      (simple_type
        (primitive_type)))
    (block
      (match_expression
        (value_identifier)
        (match_arm
          (pattern
            (literal_pattern
              (integer_literal)))
          (block
            (let_declaration
              (value_identifier)
              (integer_literal))
            (value_identifier)))
        (match_arm
          (pattern
            (wildcard_pattern))
          (integer_literal))))))

==================
Match struct pattern
==================

fn f(p: Point): int32 {
    match p {
        Point { x, y } => x + y,
        _ => 0,
    }
}

---

(source_file
  (function_definition
    (value_identifier)
    (parameters
      (parameter
        (value_identifier)
        (type_annotation
          (simple_type
            (type_identifier)))))
    (type_annotation
      (simple_type
        (primitive_type)))
    (block
      (match_expression
        (value_identifier)
        (match_arm
          (pattern
            (struct_pattern
              (type_identifier)
              (field_pattern
                (value_identifier))
              (field_pattern
                (value_identifier))))
          (binary_expression
            (value_identifier)
            (value_identifier)))
        (match_arm
          (pattern
            (wildcard_pattern))
          (integer_literal))))))

==================
Match tuple pattern
==================

fn f(): int32 {
    let pair = (1, 2);
    match pair {
        (a, b) => a + b,
        _ => 0,
    }
}

---

(source_file
  (function_definition
    (value_identifier)
    (parameters)
    (type_annotation
      (simple_type
        (primitive_type)))
    (block
      (let_declaration
        (value_identifier)
        (tuple_expression
          (integer_literal)
          (integer_literal)))
      (match_expression
        (value_identifier)
        (match_arm
          (pattern
            (tuple_pattern
              (pattern
                (identifier_pattern
                  (value_identifier)))
              (pattern
                (identifier_pattern
                  (value_identifier)))))
          (binary_expression
            (value_identifier)
            (value_identifier)))
        (match_arm
          (pattern
            (wildcard_pattern))
          (integer_literal))))))

==================
Match with multiple arms
==================

fn f(x: int32): int32 {
    match x {
        1 => 10,
        2 => 20,
        3 => 30,
        _ => 0,
    }
}

---

(source_file
  (function_definition
    (value_identifier)
    (parameters
      (parameter
        (value_identifier)
        (type_annotation
          (simple_type
            (primitive_type)))))
    (type_annotation
      (simple_type
        (primitive_type)))
    (block
      (match_expression
        (value_identifier)
        (match_arm
          (pattern
            (literal_pattern
              (integer_literal)))
          (integer_literal))
        (match_arm
          (pattern
            (literal_pattern
              (integer_literal)))
          (integer_literal))
        (match_arm
          (pattern
            (literal_pattern
              (integer_literal)))
          (integer_literal))
        (match_arm
          (pattern
            (wildcard_pattern))
          (integer_literal))))))

==================
Match enum variant pattern
==================

enum Shape {
    Circle(int32),
    Rect(int32, int32),
    Empty(),
}

fn area(s: Shape): int32 {
    match s {
        Shape::Circle(r) => r,
        Shape::Rect(w, h) => w * h,
        Shape::Empty() => 0,
    }
}

---

(source_file
  (enum_definition
    name: (type_identifier)
    (enum_variant
      name: (type_identifier)
      (simple_type
        (primitive_type)))
    (enum_variant
      name: (type_identifier)
      (simple_type
        (primitive_type))
      (simple_type
        (primitive_type)))
    (enum_variant
      name: (type_identifier)))
  (function_definition
    name: (value_identifier)
    parameters: (parameters
      (parameter
        name: (value_identifier)
        type: (type_annotation
          (simple_type
            (type_identifier)))))
    return_type: (type_annotation
      (simple_type
        (primitive_type)))
    body: (block
      (match_expression
        (value_identifier)
        (match_arm
          pattern: (pattern
            (enum_variant_pattern
              path: (qualified_type_path
                (type_identifier)
                (type_identifier))
              arguments: (pattern_arguments
                (pattern
                  (identifier_pattern
                    (value_identifier))))))
          body: (value_identifier))
        (match_arm
          pattern: (pattern
            (enum_variant_pattern
              path: (qualified_type_path
                (type_identifier)
                (type_identifier))
              arguments: (pattern_arguments
                (pattern
                  (identifier_pattern
                    (value_identifier)))
                (pattern
                  (identifier_pattern
                    (value_identifier))))))
          body: (binary_expression
            (value_identifier)
            (value_identifier)))
        (match_arm
          pattern: (pattern
            (enum_variant_pattern
              path: (qualified_type_path
                (type_identifier)
                (type_identifier))
              arguments: (pattern_arguments)))
          body: (integer_literal))))))

==================
Deeply qualified enum variant pattern
==================

fn area(s: Enum): int32 {
    match s {
        parent::mod1::mod2::mod3::infinite::Enum::Variant => 1,
        _ => 0,
    }
}

---

(source_file
  (function_definition
    name: (value_identifier)
    parameters: (parameters
      (parameter
        name: (value_identifier)
        type: (type_annotation
          (simple_type
            (type_identifier)))))
    return_type: (type_annotation
      (simple_type
        (primitive_type)))
    body: (block
      (match_expression
        (value_identifier)
        (match_arm
          pattern: (pattern
            (enum_variant_pattern
              path: (qualified_type_path
                (value_identifier)
                (value_identifier)
                (value_identifier)
                (value_identifier)
                (value_identifier)
                (type_identifier)
                (type_identifier))))
          body: (integer_literal))
        (match_arm
          pattern: (pattern
            (wildcard_pattern))
          body: (integer_literal))))))

==================
Match arm with guard
==================

fn f(x: int32): int32 {
    match x {
        1 if x > 0 => 10,
        _ => 0,
    }
}

---

(source_file
  (function_definition
    name: (value_identifier)
    parameters: (parameters
      (parameter
        name: (value_identifier)
        type: (type_annotation
          (simple_type
            (primitive_type)))))
    return_type: (type_annotation
      (simple_type
        (primitive_type)))
    body: (block
      (match_expression
        (value_identifier)
        (match_arm
          pattern: (pattern
            (literal_pattern
              (integer_literal)))
          guard: (binary_expression
            (value_identifier)
            (integer_literal))
          body: (integer_literal))
        (match_arm
          pattern: (pattern
            (wildcard_pattern))
          body: (integer_literal))))))
